// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`types fails if strategy is invalid 1`] = `"Invalid strategy "invalid". Valid strategies are: inline-svg, inline-png"`;

exports[`types fails if cwd is not provided when using imports 1`] = `"To use imports, you must provide a "cwd" option (directory to resolve imports from)"`;

exports[`types fails if using globalImports without cwd 1`] = `"To use globalImports, you must provide a "cwd" option (directory to resolve imports from)"`;

exports[`types fails if using globalImports with a file that doesn't exist 1`] = `"Invalid imports: invalid.d2 for theme a, found files: [global.d2, vars.d2]"`;

exports[`renders complex-diagram.md renders to inline-svg (markdown) 1`] = `"<p><img height="600" width="800" style="max-width:100%" data-d2-theme="default" title="Computer System" alt="Diagram of a computer system" src="data:image/svg+xml;[data]"></p>"`;

exports[`renders complex-diagram.md renders to inline-png (markdown) 1`] = `"<p><img height="600" width="800" style="max-width:100%" data-d2-theme="default" title="Computer System" alt="Diagram of a computer system" src="data:image/png;[data]"></p>"`;

exports[`renders multiple-full.html renders to inline-svg (html) 1`] = `
"<html><head>
    <title>D2 Diagram</title>
  </head>
  <body>
    <h1>D2 Diagram</h1>

    <p>This is a D2 diagram:</p>

    <img height="255" width="83" style="max-width:100%;height:auto" data-d2-theme="default" alt="" src="data:image/svg+xml;[data]">

    <p>This is another D2 diagram:</p>

    <img height="255" width="106" style="max-width:100%;height:auto" data-d2-theme="default" alt="" src="data:image/svg+xml;[data]">
  

</body></html>"
`;

exports[`renders multiple-full.html renders to inline-png (html) 1`] = `
"<html><head>
    <title>D2 Diagram</title>
  </head>
  <body>
    <h1>D2 Diagram</h1>

    <p>This is a D2 diagram:</p>

    <img height="255" width="83" style="max-width:100%;height:auto" data-d2-theme="default" alt="" src="data:image/png;[data]">

    <p>This is another D2 diagram:</p>

    <img height="255" width="106" style="max-width:100%;height:auto" data-d2-theme="default" alt="" src="data:image/png;[data]">
  

</body></html>"
`;

exports[`renders nuxt-content.html renders to inline-svg (html) 1`] = `
"<html><head></head><body><p><img height="255" width="83" style="max-width:100%;height:auto" data-d2-theme="default" alt="" src="data:image/svg+xml;[data]"></p>
</body></html>"
`;

exports[`renders nuxt-content.html renders to inline-png (html) 1`] = `
"<html><head></head><body><p><img height="255" width="83" style="max-width:100%;height:auto" data-d2-theme="default" alt="" src="data:image/png;[data]"></p>
</body></html>"
`;

exports[`renders readme-example.html renders to inline-svg (html) 1`] = `
"<html><head></head><body><img height="255" width="83" style="max-width:100%;height:auto" data-d2-theme="default" alt="" src="data:image/svg+xml;[data]">
</body></html>"
`;

exports[`renders readme-example.html renders to inline-png (html) 1`] = `
"<html><head></head><body><img height="255" width="83" style="max-width:100%;height:auto" data-d2-theme="default" alt="" src="data:image/png;[data]">
</body></html>"
`;

exports[`renders themes.html renders to inline-svg (html) 1`] = `
"<html><head></head><body><img height="255" width="83" style="max-width:100%;height:auto" data-d2-theme="dark" alt="" src="data:image/svg+xml;[data]"><img height="255" width="83" style="max-width:100%;height:auto" data-d2-theme="light" alt="" src="data:image/svg+xml;[data]">
</body></html>"
`;

exports[`renders themes.html renders to inline-png (html) 1`] = `
"<html><head></head><body><img height="255" width="83" style="max-width:100%;height:auto" data-d2-theme="dark" alt="" src="data:image/png;[data]"><img height="255" width="83" style="max-width:100%;height:auto" data-d2-theme="light" alt="" src="data:image/png;[data]">
</body></html>"
`;

exports[`renders with-imports-and-metadata.html renders to inline-svg (html) 1`] = `
"<html><head></head><body><img height="500" width="800" style="max-width:100%" data-d2-theme="default" title="This is a diagram" alt="This is a description" src="data:image/svg+xml;[data]">
</body></html>"
`;

exports[`renders with-imports-and-metadata.html renders to inline-png (html) 1`] = `
"<html><head></head><body><img height="500" width="800" style="max-width:100%" data-d2-theme="default" title="This is a diagram" alt="This is a description" src="data:image/png;[data]">
</body></html>"
`;

exports[`renders with-imports-and-metadata.md renders to inline-svg (markdown) 1`] = `"<p><img height="500" width="800" style="max-width:100%" data-d2-theme="default" title="This is a diagram" alt="This is a description" src="data:image/svg+xml;[data]"></p>"`;

exports[`renders with-imports-and-metadata.md renders to inline-png (markdown) 1`] = `"<p><img height="500" width="800" style="max-width:100%" data-d2-theme="default" title="This is a diagram" alt="This is a description" src="data:image/png;[data]"></p>"`;

exports[`nuxt content renders a block whose class was rewritten by a highlighter 1`] = `
"<html><head></head><body><p><img height="255" width="83" style="max-width:100%;height:auto" data-d2-theme="default" alt="" src="data:image/svg+xml;[data]"></p>
</body></html>"
`;
